--- a/html/index.html
+++ b/html/index.html
@@ -45,7 +45,7 @@
     <ul>
         <li>Lone child list item</li>
     </ul>
-    <a href="http://www.google.com" id="google-link">google</a><br>
+    <a class="link"href="http://www.google.com" id="google-link">google</a><br>
     <a href="http://www.google.com" id="google-link2">google2</a>
 
     <form>
@@ -54,8 +54,8 @@
         <button>Submit</button>
     </form>
 
-    <p class="para-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ad vitae iure, placeat in facere voluptatum dolorem modi hic dolorum facilis, dolores est sed assumenda possimus. Obcaecati distinctio eligendi aliquid!</p>
-    <p class="para-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ad vitae iure, placeat in facere voluptatum dolorem modi hic dolorum facilis, dolores est sed assumenda possimus. Obcaecati distinctio eligendi aliquid!</p>
+    <p class="para-text"><span class="font">ipsum dolor sit amet, consectetur </span> adipisicing elit. Doloribus ad vitae iure, placeat in facere voluptatum dolorem modi hic dolorum facilis, dolores est sed assumenda possimus. Obcaecati distinctio eligendi aliquid!</p>
+    <p class="font-family">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ad vitae iure, placeat in facere voluptatum dolorem modi hic dolorum facilis, dolores est sed assumenda possimus. Obcaecati distinctio eligendi aliquid!</p>
     
 </body>
 </html>
