--- a/html/index.html
+++ b/html/index.html
@@ -126,5 +126,14 @@
         <input type="text" placeholder="FirstName">
         <button class="submit-button">Submit</button>
     </form>
+<br>
+<br>
+    <h2 id="about-me">
+        About me
+    </h2>
+    <br>
+    <br>
+<br>
+
 </body>
 </html>
