--- a/html/googleCopy.html
+++ b/html/googleCopy.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"  type="text/css" href="../css/googleStyle.css"/>
+    <link rel="stylesheet"  type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Google-copy</title>
     <script src="../js/helloWorld.js"></script>
 </head>
@@ -25,8 +26,23 @@
             <a class="nav-bar-item" href="images"
 
             >Images</a>
+<!-- 
+            <div class="topnav">
+                <a href="javascript:void(0);" class="a-tag icon" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                  </a>
+                <div id="nav-links">
+                  <a href="#news" class="a-tag">News</a>
+                  <a href="#contact" class="a-tag">Contact</a>
+                  <a href="#about" class="a-tag">About</a>
+                </div>
 
-
+            </div> -->
+            <div class="hamburger-icon" onclick="hamburger2()">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>  
 
             <button class="nav-bar-button" onclick="alertButton()"
 
@@ -39,7 +55,7 @@
 
     </div> -->
     <nav class="hamburger">
-        <a href="#" class="nav-branding"></a>
+        <a href="#" class="nav-home">Home</a>
         <ul class="nav-menu">
             <li class="nav-item">
                 <a href="#news" class="nav-link">News</a>
@@ -53,11 +69,30 @@
             
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
         </ul>
-        <a href="#hamburger-button" class="hamb" onsubmit="alertButton()">
+        <!-- <a href="#hamburger-button" class="hamb" onsubmit="alertButton()">
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
-        </a>
+        </a> -->
+        <a href="javascript:void(0);" class="icon-two" onclick="hamburger2()">
+            <i class="fa fa-bars"></i>
+
+          </a>
+
     </nav>
+
+
+
+    <section class="top-nav">
+        <ul id="list-two" class="hamburger-menu">
+          <li><a href="#">About</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">Resume</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">News</a></li>
+          <li><a href="#">TestPage</a></li>
+        </ul>
+      </section>
+
 </body>
 </html>
