--- a/html/index.html
+++ b/html/index.html
@@ -86,7 +86,8 @@
         /* flex-grow: 1;
         flex-shrink: 0;
         flex-basis: 100px;
-        flex: grow shrink basis; */
+        flex: grow shrink basis;
+        /* shorthand _________________________________________________________________________________________________*/
         flex: 1 1 100px;
         align-self: flex-start;
         ">D</div>
