--- a/html/googleCopy.html
+++ b/html/googleCopy.html
@@ -57,22 +57,29 @@
             <li><a href="#">TestPage</a></li>
           </ul>
     </div>
-    <!-- <div class="google-logo-container"> -->
-        <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
-        id="google-logo">
-    <!-- </div> -->
-    <!-- <div id="search-bar">search
-
-    </div> -->
-    <div id="search-container">
-        <form onsubmit="alertButton()">
-            <input type="text" class="search-bar"></input>
-            <button type="submit" id="search-norm" class="search-button">Submit1</button>
-            <button id="search-lucky" class="search-button">Submit2</button>
-        </form>
-        <!-- <textarea name="comment" form="usrform">Enter text here...</textarea> -->
-
+    <div class="middle-page">
+        <div class="google-logo-container">
+            <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
+            id="google-logo">
+        </div>
+        <!-- <div id="search-bar">search
+    
+        </div> -->
+        <div id="search-container">
+            <form onsubmit="alertButton()">
+                <div class="search-bar-container">
+                    <input type="text" class="search-bar"></input>
+                </div>
+                <div class="search-button-container">
+                    <button type="submit" id="search-norm" class="search-button">Submit1</button>
+                    <button id="search-lucky" class="search-button">Submit2</button>
+                </div>
+            </form>
+            <!-- <textarea name="comment" form="usrform">Enter text here...</textarea> -->
+    
+        </div>
     </div>
+
 
     <!-- <div id="grid-container">
         <div id="one-grid"class="grid-item" style="background: rgb(162, 25, 35);">1</div>
